--- a/engines/candidate/app/views/candidate/home/show.html.haml
+++ b/engines/candidate/app/views/candidate/home/show.html.haml
@@ -19,7 +19,7 @@
     %p
       %span.ui.label.blue.medium.font-black.fluid
         = params[:m]
-  - indication = current_cadastre.enterprise_cadastres.where('inactive is not true and accepted_date is null').last
+  - indication = current_cadastre.enterprise_cadastres.where('enterprise_id not in (59,64,70,71) and inactive is not true and accepted_date is null').last
   - indication_active = current_cadastre.enterprise_cadastres.where('inactive is not true').last
   - if indication.present?
     %p
@@ -47,7 +47,7 @@
       %p O candidato pode fazer apenas duas recusas. Caso haja a terceira, o candidato passará para a condição de desistente do programa habitacional. 
       %p No caso de candidato classificado na lista de vulneráveis, não poderá haver nenhuma recusa.
       %p OBS: As recusas passaram a ser contadas a partir de 31/03/2017. 
-- if (indication_active.present? && indication_active.accepted_date.present?) || !indication_active.present?
+- if (indication_active.present? && indication_active.accepted_date.present?) || !indication_active.present? || !indication.present?
   .divider
   .ui.three.column.grid.container.black
     /- if current_cadastre.id == 245419 || current_cadastre.cadastre_convocations.where(status: true, convocation_id: 1649).present?
