--- a/engines/entity/app/views/entity/provisional_cadastres/_form.html.haml
+++ b/engines/entity/app/views/entity/provisional_cadastres/_form.html.haml
@@ -1,4 +1,5 @@
 = simple_form_for @provisional do |f|
+  = f.input :enterprise_id, as: :hidden, input_html: { value: f.object.enterprise_id.blank? ? params[:enterprise_id] : f.object.enterprise_id }
   = f.input :name,  label:'Nome completo'
   = f.input :cpf, label:'CPF', input_html: { class: 'cpf' }
   = f.input :born, label: "Data de nascimento", as: :string, input_html: { class: 'date'}
