--- a/engines/entity/app/views/entity/indications/new.html.haml
+++ b/engines/entity/app/views/entity/indications/new.html.haml
@@ -32,6 +32,7 @@
             - if 1 == 1 # (@payment > 1)
               %td
                 = simple_form_for @indication, url: indications_path(enterprise_id: @enterprise.id) do |f|
+                  = f.input :enterprise_id, as: :hidden, input_html: { value: f.object.enterprise_id.blank? ? params[:enterpise_id] : f.object.enterprise_id  }
                   = f.input :cpf, label: "CPF", placeholder: "Informe o CPF do candidato", input_html: { class: 'cpf'}
                   - if @indication.cpf_create
                     = link_to "Deseja cadastrar o candidato?", new_provisional_cadastre_path(enterprise_id: @enterprise.id), class: 'ui button blue fluid'
