--- a/engines/candidate/app/views/candidate/home/not_accept.html.haml
+++ b/engines/candidate/app/views/candidate/home/not_accept.html.haml
@@ -7,8 +7,10 @@
     .sub-title Recusa de indicação
 .ui.grid.container
   .column
+    %h3{style: 'text-align: center'}
+      Informe o motivo abaixo
     = simple_form_for @indication, url: not_accepted_path, method: :put do |f|
       = f.input :id, as: :hidden, input_html:{ value: params[:id]}
-      = f.input :accepted_observation, label: 'Motivo da recusa'
+      = f.input :accepted_observation, label: false
       .mini-margin
       = f.submit "Recusar Empreendimento", class: 'ui button green fluid', data: { disable_with: t(:disable_with) }
