--- a/engines/attendance/app/views/attendance/requeriments/new.html.haml
+++ b/engines/attendance/app/views/attendance/requeriments/new.html.haml
@@ -9,4 +9,12 @@
 .big-divider
 .ui.grid.container
   .column.content-form
-    = render 'form'
+    - if current_cadastre.assessments.where(finalized: false).present? 
+      %span{style: 'text-align: center'}
+        %i Para abertura de novo requerimento aguarde a resposta dos protocolos já iniciados.
+    - else
+      - if [3,4].include?(current_cadastre.current_situation_id) 
+        %span{style: 'text-align: center'}
+          %i A abertura de novo requerimento só poderá ser realizada por candidatos que estiverem na situação de "HABILITADO" e "CONVOCADO PARA ENTREGA DE DOCUMENTAÇÃO".
+      - else
+        = render 'form'
