--- a/engines/regularization/app/views/regularization/solicitations/complete.html.haml
+++ b/engines/regularization/app/views/regularization/solicitations/complete.html.haml
@@ -8,10 +8,7 @@
     %p
       Requerimento realizado com sucesso.
     %p{style: 'text-align:justify;'}
-      A CODHAB tem até 
-      %b
-        60 dias 
-      para responder seu requerimento. Você pode acompanhar as respostas clicando em 
+      A CODHAB entrara em contato.Você pode acompanhar as respostas clicando em 
       "Acompanhar Requerimento", na página principal de requerimentos.
     %br
     = link_to "Voltar a página principal", root_path, class: 'ui button green fluid'
