--- a/engines/candidate/app/views/candidate/home/show.html.haml
+++ b/engines/candidate/app/views/candidate/home/show.html.haml
@@ -161,6 +161,12 @@
           %i.icon.file.text.outline.huge.gray.text-center.text-center
       .text-center
         Meus Requerimentos
+    .column{data: { intro: "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut pulvinar ", position: "top"} }
+      .ui.segment.text-center
+        %a{href: "#{candidate.form_path}"}
+          %i.icon.file.text.outline.huge.gray.text-center.text-center
+      .text-center
+        Formulários
     -# - if @ticket_policy.allow_to_manifestation?
     -#   .column{data: { intro: "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut pulvinar ", position: "top"} }
     -#     .ui.segment.text-center
