--- a/engines/candidate/app/views/candidate/home/show.html.haml
+++ b/engines/candidate/app/views/candidate/home/show.html.haml
@@ -65,12 +65,13 @@
   .ui.three.column.grid.container.black
     /- if current_cadastre.id == 245419 || current_cadastre.cadastre_convocations.where(status: true, convocation_id: 1649).present?
     - if current_cadastre.id == 245419 || (current_cadastre.current_situation.present? && current_cadastre.current_situation.situation_status_id == 3)
-      .column
-        .ui.segment.text-center{style: 'background-color: #0892ff !important'}
-          %a{href: "#{attendance.custom_custom_tickets_path}"}
-            %i.icon.check.huge.gray{style: 'color: white !important'}
-        .text-center
-          Habilitação
+      - if current_cadastre.cadastre_convocations.where(convocation_id: 1678).present? && Time.current < Time.parse("2018-11-10 00:00:00")
+        .column
+          .ui.segment.text-center{style: 'background-color: #0892ff !important'}
+            %a{href: "#{attendance.custom_custom_tickets_path}"}
+              %i.icon.check.huge.gray{style: 'color: white !important'}
+          .text-center
+            Habilitação
 
     - if [12,13].include?(current_cadastre.program_id)
       - if Attendance::CustomTicket.where(cadastre_id: current_cadastre.id).where('supervisor_date is not null and attendant_date is not null and supervisor is true').present?
