--- a/engines/candidate/app/views/candidate/home/show.html.haml
+++ b/engines/candidate/app/views/candidate/home/show.html.haml
@@ -63,9 +63,11 @@
 - if (indication_active.present? && indication_active.accepted_date.present?) || !indication_active.present? || !indication.present?
   .divider
   .ui.three.column.grid.container.black
+    -@convocation = current_cadastre.cadastre_convocations.select(:cadastre_id).where(convocation_id: 1678)
+    -@doc = Attendance::CustomTicket.where(cadastre_id: @convocation).where.not(viewr_id: 0)
     /- if current_cadastre.id == 245419 || current_cadastre.cadastre_convocations.where(status: true, convocation_id: 1649).present?
     - if current_cadastre.id == 245419 || (current_cadastre.current_situation.present? && current_cadastre.current_situation.situation_status_id == 3)
-      - if current_cadastre.cadastre_convocations.where(convocation_id: 1678).present? && Time.current < Time.parse("2018-11-10 00:00:00")
+      - if current_cadastre.cadastre_convocations.where(status: true).last.convocation_id != 1678 || @doc.present?
         .column
           .ui.segment.text-center{style: 'background-color: #0892ff !important'}
             %a{href: "#{attendance.custom_custom_tickets_path}"}
