--- a/engines/candidate/app/views/candidate/home/show.html.haml
+++ b/engines/candidate/app/views/candidate/home/show.html.haml
@@ -63,11 +63,10 @@
 - if (indication_active.present? && indication_active.accepted_date.present?) || !indication_active.present? || !indication.present?
   .divider
   .ui.three.column.grid.container.black
-    -@convocation = current_cadastre.cadastre_convocations.select(:cadastre_id).where(convocation_id: 1678)
-    -@doc = Attendance::CustomTicket.where(cadastre_id: @convocation).where.not(viewr_id: 0)
+    -@doc1 = Attendance::CustomTicket.find_by(cadastre_id: current_cadastre.id)
     /- if current_cadastre.id == 245419 || current_cadastre.cadastre_convocations.where(status: true, convocation_id: 1649).present?
     - if current_cadastre.id == 245419 || (current_cadastre.current_situation.present? && current_cadastre.current_situation.situation_status_id == 3)
-      - if current_cadastre.cadastre_convocations.where(status: true).last.convocation_id != 1678 || @doc.present?
+      - if current_cadastre.cadastre_convocations.where(status: true).last.convocation_id != 1678 || @doc1.closed
         .column
           .ui.segment.text-center{style: 'background-color: #0892ff !important'}
             %a{href: "#{attendance.custom_custom_tickets_path}"}
