--- a/engines/candidate/app/views/candidate/home/show.html.haml
+++ b/engines/candidate/app/views/candidate/home/show.html.haml
@@ -69,7 +69,7 @@
     /- if current_cadastre.id == 245419 || current_cadastre.cadastre_convocations.where(status: true, convocation_id: 1649).present?
     - if current_cadastre.id == 245419 || (current_cadastre.current_situation.present? && current_cadastre.current_situation.situation_status_id == 3)
       - if ![1678, 1681].include?(current_cadastre.cadastre_convocations.where(status: true).last.convocation_id)  || @doc1.present? ||  @doc2.present?
-=        .column
+        .column
           .ui.segment.text-center{style: 'background-color: #0892ff !important'}
             %a{href: "#{attendance.custom_custom_tickets_path}"}
               %i.icon.check.huge.gray{style: 'color: white !important'}
