--- a/engines/technical_assistance/app/views/technical_assistance/pre_registers/_form.html.haml
+++ b/engines/technical_assistance/app/views/technical_assistance/pre_registers/_form.html.haml
@@ -1,6 +1,7 @@
 = simple_form_for @pre_register do |f|
   = f.input :name,label:'Nome', input_html:{placeholder: 'Nome Completo'}
   = f.input :cpf,label:'CPF', input_html: {class: 'cpf'}
+  = f.input :telephone, label:'Telefone'
   = f.input :city_id, label: 'Cidade', as: :select, collection: Core::Address::City.federal_district, input_html: { id: 'city_id', name: 'city_id'}, include_blank: 'Filtrar por Cidade'
   = f.input :address,label:'Endereço', input_html:{placeholder: 'Endereço Completo'}
   = f.input :cad,label:'CADÚnico', input_html:{placeholder: 'Nº do CADÚnico se possuir'}
