--- a/engines/candidate/app/views/candidate/home/show.html.haml
+++ b/engines/candidate/app/views/candidate/home/show.html.haml
@@ -68,7 +68,7 @@
     -@doc2 = Attendance::CustomTicket.where(cadastre_id: @convocation).where(viewr_id: nil)
     /- if current_cadastre.id == 245419 || current_cadastre.cadastre_convocations.where(status: true, convocation_id: 1649).present?
     - if current_cadastre.id == 245419 || (current_cadastre.current_situation.present? && current_cadastre.current_situation.situation_status_id == 3)
-      - if ![1678].include?(current_cadastre.cadastre_convocations.where(status: true).last.convocation_id)  || @doc1.present? ||  @doc2.present?
+      - if (current_cadastre.cadastre_convocations.present? && ![1678].include?(current_cadastre.cadastre_convocations.where(status: true).last.convocation_id)) || @doc1.present? ||  @doc2.present?
         .column
           .ui.segment.text-center{style: 'background-color: #0892ff !important'}
             %a{href: "#{attendance.custom_custom_tickets_path}"}
