--- a/engines/candidate/app/views/candidate/home/show.html.haml
+++ b/engines/candidate/app/views/candidate/home/show.html.haml
@@ -68,14 +68,25 @@
     -@doc2 = Attendance::CustomTicket.where(cadastre_id: @convocation).where(viewr_id: nil)
     /- if current_cadastre.id == 245419 || current_cadastre.cadastre_convocations.where(status: true, convocation_id: 1649).present?
     - if current_cadastre.id == 245419 || (current_cadastre.current_situation.present? && current_cadastre.current_situation.situation_status_id == 3)
+      
       - if current_cadastre.cadastre_convocations.present? && current_cadastre.cadastre_convocations.where(status: true).present?
+      
         - if ![1678].include?(current_cadastre.cadastre_convocations.where(status: true).last.convocation_id) || @doc1.present? ||  @doc2.present?
-          .column
-            .ui.segment.text-center{style: 'background-color: #0892ff !important'}
-              %a{href: "#{attendance.custom_custom_tickets_path}"}
-                %i.icon.check.huge.gray{style: 'color: white !important'}
-            .text-center
-              Habilitação
+          - if (current_cadastre.cadastre_convocations.where(status: true).last.convocation_id == 1679)
+            - if (Date.current =< Date.parse('2018-12-01'))
+              .column
+                .ui.segment.text-center{style: 'background-color: #0892ff !important'}
+                  %a{href: "#{attendance.custom_custom_tickets_path}"}
+                    %i.icon.check.huge.gray{style: 'color: white !important'}
+                .text-center
+                  Habilitação
+          - else
+            .column
+              .ui.segment.text-center{style: 'background-color: #0892ff !important'}
+                %a{href: "#{attendance.custom_custom_tickets_path}"}
+                  %i.icon.check.huge.gray{style: 'color: white !important'}
+              .text-center
+                Habilitação
 
     - if [12,13].include?(current_cadastre.program_id)
       - if Attendance::CustomTicket.where(cadastre_id: current_cadastre.id).where('supervisor_date is not null and attendant_date is not null and supervisor is true').present?
