--- a/engines/candidate/app/views/candidate/home/show.html.haml
+++ b/engines/candidate/app/views/candidate/home/show.html.haml
@@ -73,7 +73,7 @@
       
         - if ![1678].include?(current_cadastre.cadastre_convocations.where(status: true).last.convocation_id) || @doc1.present? ||  @doc2.present?
           - if (current_cadastre.cadastre_convocations.where(status: true).last.convocation_id == 1679)
-            - if (Date.current =< Date.parse('2018-12-01'))
+            - if (Date.current < Date.parse('2018-12-02'))
               .column
                 .ui.segment.text-center{style: 'background-color: #0892ff !important'}
                   %a{href: "#{attendance.custom_custom_tickets_path}"}
