--- a/engines/attendance/app/views/attendance/custom/custom_tickets/_ticket.html.haml
+++ b/engines/attendance/app/views/attendance/custom/custom_tickets/_ticket.html.haml
@@ -1,103 +1,269 @@
 :css
-  #message p a{
-    color: black !important;
-    text-decoration: underline !important;
-  }
+	#message p a{
+		color: black !important;
+		text-decoration: underline !important;
+	}
 
 .ui.grid
-  .two.wide.mobile.column
-    %a{href: "#{candidate.root_path}"}
-      %i.big.arrow.left.icon
-  .thirteen.wide.mobile.column.text-center
-    .title-header Atendimento
-    .sub-title Processo de habilitação
-    .divider
+	.two.wide.mobile.column
+		%a{href: "#{candidate.root_path}"}
+			%i.big.arrow.left.icon
+	.thirteen.wide.mobile.column.text-center
+		.title-header Atendimento
+		.sub-title Processo de habilitação
+		.divider
 
-  - if (@ticket.action_one && @ticket.action_two && @ticket.action_three && @ticket.action_four && @ticket.action_five && !@ticket.request)
-    .ui.label.green.fluid{style: 'text-align: justify; font-size: 14px'}
-      %p Parabéns, você concluiu as 5 etapas do atendimento.
-      %p Favor aguardar a análise dos documentos enviados.
-      %p Posteriormente, você receberá uma notificação pelo aplicativo sobre sua situação no programa habitacional do DF.
-  - elsif !@ticket.request
-    .ui.label.blue{style: 'margin-bottom: 30px'}
-      %p{style: 'text-align: justify; font-size: 14px !important'}
-        Para finalizar o atendimento é necessário que você conclua as 5 etapas abaixo:
-  - else
-    .ui.label.yellow.fluid{style: 'text-align: justify; font-size: 14px; color: black !important;'}
-      #message{style: 'text-align: justify; font-size: 14px !important; font-weight: 100 !important;'}
-        %p{style: 'text-align: justify; font-size: 14px !important;'}
-          %b Atenção!
-          - @ticket.requests.where(closed:  false).each do |request|
-            = request.description.html_safe
+	- if (@ticket.action_one && @ticket.action_two && @ticket.action_three && @ticket.action_four && @ticket.action_five && !@ticket.request)
+		.ui.label.green.fluid{style: 'text-align: justify; font-size: 14px'}
+			%p Parabéns, você concluiu as 5 etapas do atendimento.
+			%p Favor aguardar a análise dos documentos enviados.
+			%p Posteriormente, você receberá uma notificação pelo aplicativo sobre sua situação no programa habitacional do DF.
+	- elsif !@ticket.request
+		.ui.label.blue{style: 'margin-bottom: 30px'}
+			%p{style: 'text-align: justify; font-size: 14px !important'}
+				Para finalizar o atendimento é necessário que você conclua as 5 etapas abaixo:
+	- else
+		.ui.label.yellow.fluid{style: 'text-align: justify; font-size: 14px; color: black !important;'}
+			#message{style: 'text-align: justify; font-size: 14px !important; font-weight: 100 !important;'}
+				%p{style: 'text-align: justify; font-size: 14px !important;'}
+					%b Atenção!
+					- @ticket.requests.where(closed:  false).each do |request|
+						= request.description.html_safe
 
-  %table.ui.table.celled
-    %tbody{style: "#{@ticket.action_one ? 'background-color: #51a551' : ''}"}
-      %tr
-        %td
-          - if @ticket.action_one
-            %i.icon.check{style: 'color: white'}
-            = link_to "Dados básicos", custom_custom_ticket_message_path(@ticket, step: 'cadastre'), remote: true, style: "#{@ticket.action_one ? 'color: white' : ''}"
-          - else
-            %i.icon.warning{style: 'color: gray'}
-            = link_to "Dados básicos", edit_custom_custom_ticket_custom_cadastre_path(@ticket,   @ticket.cadastre_mirror_id), style: "#{@ticket.action_one ? 'color: white' : ''}"
-          %br
+	%table.ui.table.celled
+		%tbody{style: "#{@ticket.action_one ? 'background-color: #51a551' : ''}"}
+			%tr
+				%td
+					- if @ticket.action_one
+						%i.icon.check{style: 'color: white'}
+						= link_to "Dados básicos", custom_custom_ticket_message_path(@ticket, step: 'cadastre'), remote: true, style: "#{@ticket.action_one ? 'color: white' : ''}"
+					- else
+						%i.icon.warning{style: 'color: gray'}
+						= link_to "Dados básicos", edit_custom_custom_ticket_custom_cadastre_path(@ticket,   @ticket.cadastre_mirror_id), style: "#{@ticket.action_one ? 'color: white' : ''}"
+					%br
 
-    %tbody{style: "#{@ticket.action_two ? 'background-color: #51a551' : ''}"}
-      %tr
-        %td
-          - if @ticket.action_two
-            %i.icon.check{style: 'color: white'}
-            = link_to "Dependentes", custom_custom_ticket_message_path(@ticket, step: 'dependent'), remote: true, style: "#{@ticket.action_two ? 'color: white' : ''}"
-          - else
-            %i.icon.warning{style: 'color: gray'}
-            = link_to "Dependentes", custom_custom_ticket_custom_dependents_path(@ticket), style: "#{@ticket.action_two ? 'color: white' : ''}"
-    %tbody{style: "#{@ticket.action_three ? 'background-color: #51a551' : ''}"}
-      %tr
-        %td
-          - if @ticket.action_three
-            %i.icon.check{style: 'color: white'}
-            = link_to "Renda", custom_custom_ticket_message_path(@ticket, step: 'income'), remote: true, style: "#{@ticket.action_three ? 'color: white' : ''}"
-          - else
-            %i.icon.warning{style: 'color: gray'}
-            = link_to "Renda", custom_custom_ticket_custom_incomes_path(@ticket), style: "#{@ticket.action_three ? 'color: white' : ''}"
-    %tbody{style: "#{@ticket.action_four ? 'background-color: #51a551' : ''}"}
-      %tr
-        %td
-          - if @ticket.action_four
-            %i.icon.check{style: 'color: white'}
-            = link_to "Contatos pessoais", custom_custom_ticket_message_path(@ticket, step: 'contact'), remote: true, style: "#{@ticket.action_four ? 'color: white' : ''}"
-          - else
-            %i.icon.warning{style: 'color: gray'}
-            = link_to "Contatos pessoais", edit_custom_custom_ticket_custom_contact_path(@ticket, @ticket.cadastre_mirror_id), style: "#{@ticket.action_four ? 'color: white' : ''}"
+		%tbody{style: "#{@ticket.action_two ? 'background-color: #51a551' : ''}"}
+			%tr
+				%td
+					- if @ticket.action_two
+						%i.icon.check{style: 'color: white'}
+						= link_to "Dependentes", custom_custom_ticket_message_path(@ticket, step: 'dependent'), remote: true, style: "#{@ticket.action_two ? 'color: white' : ''}"
+					- else
+						%i.icon.warning{style: 'color: gray'}
+						= link_to "Dependentes", custom_custom_ticket_custom_dependents_path(@ticket), style: "#{@ticket.action_two ? 'color: white' : ''}"
+		%tbody{style: "#{@ticket.action_three ? 'background-color: #51a551' : ''}"}
+			%tr
+				%td
+					- if @ticket.action_three
+						%i.icon.check{style: 'color: white'}
+						= link_to "Renda", custom_custom_ticket_message_path(@ticket, step: 'income'), remote: true, style: "#{@ticket.action_three ? 'color: white' : ''}"
+					- else
+						%i.icon.warning{style: 'color: gray'}
+						= link_to "Renda", custom_custom_ticket_custom_incomes_path(@ticket), style: "#{@ticket.action_three ? 'color: white' : ''}"
+		%tbody{style: "#{@ticket.action_four ? 'background-color: #51a551' : ''}"}
+			%tr
+				%td
+					- if @ticket.action_four
+						%i.icon.check{style: 'color: white'}
+						= link_to "Contatos pessoais", custom_custom_ticket_message_path(@ticket, step: 'contact'), remote: true, style: "#{@ticket.action_four ? 'color: white' : ''}"
+					- else
+						%i.icon.warning{style: 'color: gray'}
+						= link_to "Contatos pessoais", edit_custom_custom_ticket_custom_contact_path(@ticket, @ticket.cadastre_mirror_id), style: "#{@ticket.action_four ? 'color: white' : ''}"
 
-    %tbody{style: "#{@ticket.action_five ? 'background-color: #51a551' : ''}"}
-      %tr
-        %td
-          - if @ticket.action_five
-            %i.icon.check{style: 'color: white'}
-            = link_to "Certidões dos cartórios", custom_custom_ticket_message_path(@ticket, step: 'document'), remote: true, style: "#{@ticket.action_five ? 'color: white' : ''}"
-          - else
-            %i.icon.warning{style: 'color: gray'}
-            = link_to "Certidões dos cartórios", new_custom_custom_ticket_custom_document_path(@ticket, type: 'document'), style: "#{@ticket.action_five ? 'color: white' : ''}"
+		%tbody{style: "#{@ticket.action_five ? 'background-color: #51a551' : ''}"}
+			%tr
+				%td
+					- if @ticket.action_five
+						%i.icon.check{style: 'color: white'}
+						= link_to "Certidões dos cartórios", custom_custom_ticket_message_path(@ticket, step: 'document'), remote: true, style: "#{@ticket.action_five ? 'color: white' : ''}"
+					- else
+						%i.icon.warning{style: 'color: gray'}
+						= link_to "Certidões dos cartórios", new_custom_custom_ticket_custom_document_path(@ticket, type: 'document'), style: "#{@ticket.action_five ? 'color: white' : ''}"
 
-  %br
-  %br
+	%br
+	%br
+		.text-justify
+			%h5
+				Listagem de documentos
+			%p
+				1. Certidão de Nascimento ou de Casamento;
+			%p
+				2. Documento comprobatório de alteração do estado civil (se separado, divorciado ou viúvo);
+			%p
+				3. Carteira de Identidade e CPF
+			%p
+				4. Certidão de Nascimento dos filhos e demais dependentes declarados e CPF se a idade for igual ou maior de 14 anos;
+			%p
+				5. RG de dependentes maiores de 18 anos;
+			%p
+				6. Comprovante de Renda e Carteira de Trabalho;
+			%p
+				7. Carteira de Trabalho de dependentes maiores de 18 anos (Para comprovação de dependência financeira);
+			%p
+				8. Declaração de escolaridade de curso superior de dependentes maiores de 18 anos;
+			%p
+				9. Comprovante de residência no DF, últimos 5 anos (ano a ano); Atenção: é necessário comprovante para cada um dos últimos cinco anos;
+			%p
+				10. Comprovante de tempo de domicílio no DF (chegada ao DF);
+			%p
+				11. Certidões Negativas de todos os Cartórios de Registro de Imóveis do Distrito Federal.
 
+			%p
+				%h5
+					Atenção: As imagens devem obrigatoriamente ser de documentos originais.
+
+			%p
+				%h5
+					Você poderá escolher um dos cartórios abaixo e requerer as 9 certidões em um só local
+
+			%p
+				Certidão do Cartório do 1º Ofício de Registro de Imóveis
+				Ed. Venâncio 2000 – 1º Andar – Sl 140-B
+			%p
+				Certidão do Cartório do 2º Ofício de Registro de Imóveis
+				Ed. Venâncio 2000 – 1º Andar – Sl 140-C
+			%p
+				Certidão do Cartório do 3º Ofício de Registro de Imóveis
+				QS 1 Rua 210 Lt 40 Sl 915/928 Torre B – Taguatinga Shopping
+			%p
+				Certidão do Cartório do 4º Ofício de Registro de Imóveis
+				EQ 31/33 Lote 05 Ed. Consei Sl 210/2012 – Guará II.  
+			%p
+				Certidão do Cartório do 5º Ofício de Registro de Imóveis
+				Qd 07 Lts 990/995 – 1°  andar – Setor  Leste Industrial/Gama
+			%p
+				Certidão do Cartório do 6º Ofício de Registro de Imóveis
+				CNM 01 Bloco H, 1º Andar – Ceilândia Centro
+			%p
+				Certidão do Cartório do 7º Ofício de Registro de Imóveis
+				Qd 05 Área Reservada 01 Loja 01 Ed. Mirante da Serra Lj 01 – Sobradinho  
+			%p
+				Certidão do Cartório do 8º Ofício de Registro de Imóveis
+				Av. Independência, Plaza Shopping, Sala 13 Setor – Comercial Central – Planaltina
+			%p
+				Certidão do Cartório do 9º Ofício de Registro de Imóveis
+				Qd 12 Lt 08 – Setor Tradicional – Brazlândia
+			%p
+				%h5
+					Atenção
+					Para comprovar os 5 anos no DF e o tempo de domicílio no DF (Chegada no DF), serão aceitos os seguintes documentos que contenham nome e endereço residencial do candidato:
+
+			
+			%p
+				a) Comprovante de água, luz ou telefone; 
+			%p	
+				b)  Carteira de Trabalho acompanhada de declaração emitida pelo órgão empregador; 
+			%p
+				c) Declaração funcional, quando se tratar de servidor público;
+			%p
+				d) Declaração de instituição bancária com movimentação de conta corrente;
+			%p
+				e) Declaração escolar do candidato ou dos filhos;
+			%p
+				f) Fatura/carnê de compra a crédito (Válido somente para o ano de emissão);
+			%p
+				g) Nota fiscal de compra (Válido somente para o ano de emissão);
+			%p
+				h) Ocorrência policial; 
+			%p
+				i) Notificação de multas de trânsito; 
+			%p
+				j) Contrato de locação de imóvel, devidamente autenticado, válido somente para o ano de assinatura com autenticação no mesmo ano; 
+			%p
+				l) Declaração de IRPF com recibo de entrega, sendo considerado para comprovação o ano calendário do IR.
+
+
+			%p
+				%h5
+					Para comprovação do estado civil:
+
+			%p
+				Certidão de casamento ou de nascimento  e, se for o caso, documento comprobatório de separação judicial, divórcio ou viuvez;
+
+			%p
+				%h5
+					Quem pode ser considerado dependente:
+
+			%p
+				O cônjuge;
+			%p
+				Companheiro(a), inclusive em relação homoafetiva, desde que caracterizada união estável com firma reconhecida em cartório;
+			%p
+				Filho(a) ou enteado(a) menor de 18 anos ou menor de 24 anos. Neste último caso, desde que esteja cursando o ensino superior, com a devida comprovação dessa situação e da dependência econômica;
+			%p
+				Irmão(ã), neto(a) ou bisneto(a) menor de 18 anos, desde que detenha a guarda judicial, ou menor de 24 anos, desde que detenha a guarda judicial e esteja cursando ensino superior, com a devida comprovação dessa situação e da dependência econômica;
+			%p	
+				Pai/mãe, avô/avó desde que sejam dependentes na declaração do Imposto de Renda de Pessoa Física – IRPF sendo considerado o ano calendário do IR;
+			%p
+				Incapaz que esteja sob sua tutela ou curatela, comprovada por decisão judicial.
+
+				
+			%p
+				%h5
+					Como comprovar dependentes:
+
+			%p	
+				É necessária a apresentação do Cadastro de Pessoa Física – CPF para dependentes com idade igual ou superior a 14 anos, acrescido dos seguintes documentos, dentro do prazo de validade, conforme o caso:
+			%p
+				a) Certidão de nascimento;
+			%p
+				b) Documento de Identidade, CNH ou passaporte brasileiro; 
+			%p
+				c) Certificado de reservista; ou 
+			%p
+				d) Carteira de Trabalho e Previdência Social – CTPS; ou 
+			%p
+				e) Certidão de casamento ou união estável com firma reconhecida;
+			%p
+				f) Certidão de tutela ou curatela por determinação judicial, para os que se encontrem sob esses institutos; 
+			%p
+				g) Comprovante de dependência dos pais, avós ou bisavós no Imposto de Renda de Pessoa Física – IRPF do titular.
+
+			%p
+				Para comprovar a renda familiar bruta de até 12 (doze) salários mínimos serão admitidos:			
+			%p
+				É necessária a apresentação do comprovante de recolhimento de Imposto de Renda (ano do exercício) para todos os contribuintes que são obrigados a declarar renda para a Receita Federal
+			%p
+				%h5
+					a) Empregado com Carteira de Trabalho assinada: 
+			%p
+				cópia das folhas da carteira de trabalho em que conste a qualificação civil, a foto, o contrato de trabalho e os três últimos contracheques contendo o carimbo e CNPJ do empregador.
+			%p
+				%h5
+					b) Comerciante:
+			%p
+				cópia das folhas da carteira de trabalho em que conste a qualificação civil, a foto, o contrato de trabalho;
+			%p
+				contrato social registrado na Junta Comercial e DECORE emitida por profissional competente; e declaração de Imposto de Renda de Pessoa Física (IRPF) com recibo de entrega.
+			%p
+				%h5
+					c) Servidor ou Empregado Público: 
+			%p
+				os três últimos contracheques emitidos pelo órgão empregador, com carimbo de CNPJ ou com código de validação.
+			%p
+				%h5
+					d) Trabalhador Autônomo: 
+			%p
+				cópia das folhas da carteira de trabalho em que conste a qualificação civil, a foto, o contrato de trabalho e declaração de atividade informal.
+			%p
+				DECORE emitido por profissional competente e declaração de Imposto de Renda com recibo de entrega.
+
+ 
 - if !@ticket.term_one
-  :javascript
-    $(document).ready(function() {
-      $('.ui.modal').html("#{escape_javascript(render 'term_one')}")
-      $('.ui.modal').modal('show')
-    })
+	:javascript
+		$(document).ready(function() {
+			$('.ui.modal').html("#{escape_javascript(render 'term_one')}")
+			$('.ui.modal').modal('show')
+		})
 - if !@ticket.term_two
-  :javascript
-    $(document).ready(function() {
-      $('.ui.modal').html("#{escape_javascript(render 'term_two')}")
-      $('.ui.modal').modal('show')
-    })
+	:javascript
+		$(document).ready(function() {
+			$('.ui.modal').html("#{escape_javascript(render 'term_two')}")
+			$('.ui.modal').modal('show')
+		})
 - if !@ticket.term_three
-  :javascript
-    $(document).ready(function() {
-      $('.ui.modal').html("#{escape_javascript(render 'term_three')}")
-      $('.ui.modal').modal('show')
-    })
+	:javascript
+		$(document).ready(function() {
+			$('.ui.modal').html("#{escape_javascript(render 'term_three')}")
+			$('.ui.modal').modal('show')
+		})
