--- a/engines/candidate/app/views/candidate/cadastres/show.html.haml
+++ b/engines/candidate/app/views/candidate/cadastres/show.html.haml
@@ -23,6 +23,7 @@
         = current_cadastre.current_situation_name
       .divider
         %b= link_to "Voltar Para o Início", candidate.root_path, class:'ui yellow button mini'
+        %b= link_to "Habilitação", candidate.root_path, class:'ui blue button mini'
 
 .ui.three.column.grid.container-fluid
   - current_cadastre.list.each do |list|
