--- a/engines/attendance/app/views/attendance/custom/custom_tickets/index.html.haml
+++ b/engines/attendance/app/views/attendance/custom/custom_tickets/index.html.haml
@@ -1,11 +1,12 @@
 .ui.grid#custom
-  - if @ticket.nil?
-    - if [12,13].include?(current_cadastre.program_id)
-      = render 'welcome_reallocation'
+  - if !(current_cadastre.cadastre_convocations.where(status: true).last.convocation_id == 1679)
+    - if @ticket.nil? 
+      - if [12,13].include?(current_cadastre.program_id)
+        = render 'welcome_reallocation'
+      - else
+        = render 'welcome'
     - else
-      = render 'welcome'
-  - else
-    - if [12,13].include?(current_cadastre.program_id)
-      = render 'ticket_reallocation'
-    - else
-      = render 'ticket'
+      - if [12,13].include?(current_cadastre.program_id)
+        = render 'ticket_reallocation'
+      - else
+        = render 'ticket'
