--- a/engines/candidate/app/views/candidate/home/help.html.haml
+++ b/engines/candidate/app/views/candidate/home/help.html.haml
@@ -8,7 +8,7 @@
   .column
     %table.ui.celled.table
       %tbody.black
-        = link_to 'Passo a passo','http://www.codhab.df.gov.br/uploads/archive/files/3b6b6f8a0fa81656a24673deeda2b0e1.pdf',target:'_blank'
+        = link_to 'Passo a passo','http://www.codhab.df.gov.br/pagina/270',target:'_blank'
         %br
         %br
         = link_to 'Documentos Necessários','http://www.codhab.df.gov.br/pagina/254', target:'_blank'
