--- a/engines/regularization/app/views/regularization/solicitations/solicitation_error.html.haml
+++ b/engines/regularization/app/views/regularization/solicitations/solicitation_error.html.haml
@@ -20,6 +20,6 @@
           Veja o exemplo abaixo
       %br
       = image_tag('/images/erro-img.png', width:'100%')
-    - else
-      %p Você já possui um requerimento aberto, aguarde a resposta da CODHAB para a abertura de um novo requerimento.
-      %p Acompanhe seu requerimento #{link_to "aqui", monitoring_path(by_cpf: params[:cpf])}
+    -# - else
+    -#   %p Você já possui um requerimento aberto, aguarde a resposta da CODHAB para a abertura de um novo requerimento.
+    -#   %p Acompanhe seu requerimento #{link_to "aqui", monitoring_path(by_cpf: params[:cpf])}
