--- a/engines/attendance/app/views/attendance/custom/custom_documents/_income_dependent.html.haml
+++ b/engines/attendance/app/views/attendance/custom/custom_documents/_income_dependent.html.haml
@@ -14,6 +14,14 @@
         %i  Nenhum arquivo enviado.
         %br/
         %br/
+
+      - if ((@ticket.cadastre_mirror.dependent_mirrors.find(params[:dependent_mirror_id]).income.to_f >= 2379.97) rescue nil)
+        %div
+          %label.ui.icon.button.fluid{:for => 'document_1'}
+            %i.photo.icon
+            Declaração IR
+          = f.input :attachment, as: :hidden, label: false, as: :file, input_html: { style: 'display: none', class: 'upload', id: 'document_1' }
+        %br        
       %div
         %label.ui.icon.button.fluid{:for => 'document_1'}
           %i.photo.icon
