--- a/engines/attendance/app/views/attendance/custom/custom_documents/_income_main.html.haml
+++ b/engines/attendance/app/views/attendance/custom/custom_documents/_income_main.html.haml
@@ -14,8 +14,8 @@
       %i  Nenhum arquivo enviado.
       %br/
       %br/
-
-    - if @ticket.cadastre_mirror.income.to_f >= 2379.97
+    
+    - if @ticket.cadastre_mirror.main_income.to_f >= 2379.97
       %div
         %label.ui.icon.button.fluid{:for => 'document_1'}
           %i.photo.icon
