--- a/engines/attendance/app/views/attendance/custom/custom_tickets/index.html.haml
+++ b/engines/attendance/app/views/attendance/custom/custom_tickets/index.html.haml
@@ -1,5 +1,5 @@
 .ui.grid#custom
-  - if !current_cadastre.cadastre_convocations.present? || !(current_cadastre.cadastre_convocations.where(status: true).last.convocation_id == 1679)
+  - if !current_cadastre.cadastre_convocations.present? || !([1679, 1678].include?(current_cadastre.cadastre_convocations.where(status: true).last.convocation_id))
     - if @ticket.nil?
       - if [12,13].include?(current_cadastre.program_id)
         = render 'welcome_reallocation'
