--- a/engines/attendance/app/views/attendance/custom/custom_tickets/index.html.haml
+++ b/engines/attendance/app/views/attendance/custom/custom_tickets/index.html.haml
@@ -13,3 +13,5 @@
           = render 'ticket_reallocation'
         - else
           = render 'ticket'
+  - else
+    %p Você não possui acesso a este menu.
