--- a/engines/attendance/app/views/attendance/custom/custom_tickets/index.html.haml
+++ b/engines/attendance/app/views/attendance/custom/custom_tickets/index.html.haml
@@ -14,4 +14,4 @@
         - else
           = render 'ticket'
   - else
-    %p Você não possui acesso a este menu.
+    Você não possui acesso a este menu.
