--- a/engines/attendance/app/views/attendance/custom/custom_tickets/index.html.haml
+++ b/engines/attendance/app/views/attendance/custom/custom_tickets/index.html.haml
@@ -1,15 +1,22 @@
 .ui.grid#custom
-  - if !current_cadastre.cadastre_convocations.present? || !([1679, 1678].include?(current_cadastre.cadastre_convocations.where(status: true).last.convocation_id))
-    - if @ticket.nil?
-      - if [12,13].include?(current_cadastre.program_id)
-        = render 'welcome_reallocation'
-      - else
+  - if current_cadastre.cadastre_convocations.present?
+    - if ([1679, 1678].include?(current_cadastre.cadastre_convocations.where(status: true).last.convocation_id))
+      - if @ticket.nil?
         = render 'welcome'
+      - else
+        - if @ticket.requests.present?
+          = render 'ticket'
+        - else
+          Sem permissão para acessar o conteúdo desta página
     - else
-       - if ([1679, 1678].include?(current_cadastre.cadastre_convocations.where(status: true).last.convocation_id)) && @ticket.requests.present?
-         = render 'ticket'
-       - else 
+      - if @ticket.nil?
+        - if [12,13].include?(current_cadastre.program_id)
+          = render 'welcome_reallocation'
+        - else
+          = render 'welcome'
+      - else
         - if [12,13].include?(current_cadastre.program_id)
           = render 'ticket_reallocation'
         - else
-          = render 'ticket'
+          = render 'ticket'     
+      
