--- a/engines/candidate/app/views/candidate/home/show.html.haml
+++ b/engines/candidate/app/views/candidate/home/show.html.haml
@@ -67,7 +67,7 @@
 
     - if current_cadastre.id == 245419 || (current_cadastre.current_situation.present? && current_cadastre.current_situation.situation_status_id == 3)
       
-      - if current_cadastre.cadastre_convocations.present? && current_cadastre.cadastre_convocations.where(status: true).present? && Attendance::CustomTicket.where(cadastre_id: @convocation).present?
+      - if current_cadastre.cadastre_convocations.present? && current_cadastre.cadastre_convocations.where(status: true).present?
         .column
           .ui.segment.text-center{style: 'background-color: #0892ff !important'}
             %a{href: "#{attendance.custom_custom_tickets_path}"}
