--- a/engines/entity/app/views/entity/indications/index.html.haml
+++ b/engines/entity/app/views/entity/indications/index.html.haml
@@ -9,7 +9,7 @@
   %table.ui.celled.table
     %tbody
       - if @enterprises.present?
-        - @enterprises.each do |enterprise|
+        - @enterprises.where(enable: true).each do |enterprise|
           %tr
             %td
             %td
